y.output
Grammaire

    0 $accept: program $end

    1 program: stmt_list END_INPUT

    2 stmt_block: BEG NEWLINE stmt_list END stmt_terminator NEWLINE

    3 stmt_block_with_return: BEG NEWLINE stmt_list RETURN expr stmt_terminator NEWLINE END stmt_terminator NEWLINE
    4                       | BEG NEWLINE RETURN expr stmt_terminator NEWLINE END stmt_terminator NEWLINE

    5 stmt_list: stmt
    6          | stmt_list stmt

    7 stmt: expr stmt_terminator NEWLINE
    8     | declaration_block NEWLINE
    9     | assignation stmt_terminator NEWLINE
   10     | comment_block
   11     | IF expr THEN NEWLINE stmt
   12     | IF expr THEN NEWLINE stmt_block
   13     | IF expr THEN NEWLINE stmt ELSE NEWLINE stmt
   14     | IF expr THEN NEWLINE stmt_block ELSE NEWLINE stmt_block
   15     | IF expr THEN NEWLINE stmt ELSE NEWLINE stmt_block
   16     | IF expr THEN NEWLINE stmt_block ELSE NEWLINE stmt
   17     | WHILE expr DO NEWLINE stmt
   18     | WHILE expr DO NEWLINE stmt_block
   19     | FOR assignation TO constant DO NEWLINE stmt
   20     | FOR assignation TO constant DO NEWLINE stmt_block
   21     | READ '(' id_declarator ')' stmt_terminator NEWLINE
   22     | WRITE '(' expr ')' stmt_terminator NEWLINE
   23     | FUNCTION id_declarator '(' declaration_list ')' DECLARATOR type_specifier NEWLINE stmt_block_with_return
   24     | FUNCTION id_declarator '(' declaration_list ')' DECLARATOR type_specifier NEWLINE stmt_block
   25     | ignore_newline

   26 declaration_block: VAR NEWLINE TAB declaration
   27                  | declaration_block NEWLINE TAB declaration

   28 declaration_list: declaration
   29                 | declaration_list declaration

   30 declaration: declarator_list DECLARATOR type_specifier stmt_terminator

   31 declarator_list: id_declarator
   32                | declarator_list COMMA id_declarator

   33 id_declarator: IDENTIFIER

   34 type_specifier: INT
   35               | CHAR
   36               | STRING
   37               | BOOLEAN
   38               | REAL
   39               | VOID

   40 assignation: id_declarator ASSIGNATOR expr

   41 constant: INT_VALUE
   42         | REAL_VALUE
   43         | STRING_VALUE
   44         | CHAR_VALUE
   45         | BOOLEAN_VALUE
   46         | NULL_VALUE

   47 expr: constant
   48     | id_declarator
   49     | '-' expr
   50     | expr '+' expr
   51     | expr '-' expr
   52     | expr '*' expr
   53     | expr '/' expr
   54     | expr INF expr
   55     | expr AND expr
   56     | expr OR expr
   57     | NOT expr
   58     | expr SUP expr
   59     | expr SUPEQ expr
   60     | expr INFEQ expr
   61     | expr NOTEQ expr
   62     | expr EQ expr
   63     | expr DIV expr
   64     | expr MOD expr
   65     | '(' expr ')'
   66     | ABS '(' expr ')'
   67     | LOG '(' expr ')'
   68     | LOG '(' expr COMMA expr ')'
   69     | EXP '(' expr ')'

   70 comment_block: COMMENT NEWLINE

   71 stmt_terminator: TERMINATOR

   72 ignore_newline: NEWLINE


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
'(' (40) 21 22 23 24 65 66 67 68 69
')' (41) 21 22 23 24 65 66 67 68 69
'*' (42) 52
'+' (43) 50
'-' (45) 49 51
'/' (47) 53
error (256)
INT_VALUE <intValue> (258) 41
REAL_VALUE <realValue> (259) 42
CHAR_VALUE <charValue> (260) 44
BOOLEAN_VALUE <boolValue> (261) 45
IDENTIFIER <strValue> (262) 33
STRING_VALUE <strValue> (263) 43
STRING <strValue> (264) 36
CHAR <strValue> (265) 35
BOOLEAN <strValue> (266) 37
COMMENT <strValue> (267) 70
VAR (268) 26
DIV (269) 63
MOD (270) 64
AND (271) 55
OR (272) 56
NOT (273) 57
ABS (274) 66
LOG (275) 67 68
EXP (276) 69
BEG (277) 2 3 4
END (278) 2 3 4
IF (279) 11 12 13 14 15 16
THEN (280) 11 12 13 14 15 16
ELSE (281) 13 14 15 16
WHILE (282) 17 18
DO (283) 17 18 19 20
FOR (284) 19 20
TO (285) 19 20
READ (286) 21
WRITE (287) 22
FUNCTION (288) 23 24
RETURN (289) 3 4
NULL_VALUE (290) 46
EQ (291) 62
INF (292) 54
INFEQ (293) 60
SUP (294) 58
SUPEQ (295) 59
NOTEQ (296) 61
COMMA (297) 32 68
TAB (298) 26 27
NEWLINE (299) 2 3 4 7 8 9 11 12 13 14 15 16 17 18 19 20 21 22 23 24
    26 27 70 72
DECLARATOR (300) 23 24 30
ASSIGNATOR (301) 40
INT (302) 34
REAL (303) 38
END_INPUT (304) 1
TERMINATOR (305) 71
VOID (306) 39
UMINUS (307)
IFX (308)


Non-terminaux, suivis des règles où ils apparaissent

$accept (60)
    à gauche: 0
program <treeVal> (61)
    à gauche: 1, à droite: 0
stmt_block <treeVal> (62)
    à gauche: 2, à droite: 12 14 15 16 18 20 24
stmt_block_with_return <treeVal> (63)
    à gauche: 3 4, à droite: 23
stmt_list <treeVal> (64)
    à gauche: 5 6, à droite: 1 2 3 6
stmt <treeVal> (65)
    à gauche: 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25,
    à droite: 5 6 11 13 15 16 17 19
declaration_block <treeVal> (66)
    à gauche: 26 27, à droite: 8 27
declaration_list <treeVal> (67)
    à gauche: 28 29, à droite: 23 24 29
declaration <treeVal> (68)
    à gauche: 30, à droite: 26 27 28 29
declarator_list <treeVal> (69)
    à gauche: 31 32, à droite: 30 32
id_declarator <treeVal> (70)
    à gauche: 33, à droite: 21 23 24 31 32 40 48
type_specifier <treeVal> (71)
    à gauche: 34 35 36 37 38 39, à droite: 23 24 30
assignation <treeVal> (72)
    à gauche: 40, à droite: 9 19 20
constant <treeVal> (73)
    à gauche: 41 42 43 44 45 46, à droite: 19 20 47
expr <treeVal> (74)
    à gauche: 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64
    65 66 67 68 69, à droite: 3 4 7 11 12 13 14 15 16 17 18 22 40
    49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69
comment_block <treeVal> (75)
    à gauche: 70, à droite: 10
stmt_terminator (76)
    à gauche: 71, à droite: 2 3 4 7 9 21 22 30
ignore_newline (77)
    à gauche: 72, à droite: 25


État 0

    0 $accept: . program $end

    INT_VALUE      décalage et aller à l'état 1
    REAL_VALUE     décalage et aller à l'état 2
    CHAR_VALUE     décalage et aller à l'état 3
    BOOLEAN_VALUE  décalage et aller à l'état 4
    IDENTIFIER     décalage et aller à l'état 5
    STRING_VALUE   décalage et aller à l'état 6
    COMMENT        décalage et aller à l'état 7
    VAR            décalage et aller à l'état 8
    NOT            décalage et aller à l'état 9
    ABS            décalage et aller à l'état 10
    LOG            décalage et aller à l'état 11
    EXP            décalage et aller à l'état 12
    IF             décalage et aller à l'état 13
    WHILE          décalage et aller à l'état 14
    FOR            décalage et aller à l'état 15
    READ           décalage et aller à l'état 16
    WRITE          décalage et aller à l'état 17
    FUNCTION       décalage et aller à l'état 18
    NULL_VALUE     décalage et aller à l'état 19
    NEWLINE        décalage et aller à l'état 20
    '-'            décalage et aller à l'état 21
    '('            décalage et aller à l'état 22

    program            aller à l'état 23
    stmt_list          aller à l'état 24
    stmt               aller à l'état 25
    declaration_block  aller à l'état 26
    id_declarator      aller à l'état 27
    assignation        aller à l'état 28
    constant           aller à l'état 29
    expr               aller à l'état 30
    comment_block      aller à l'état 31
    ignore_newline     aller à l'état 32


État 1

   41 constant: INT_VALUE .

    $défaut  réduction par utilisation de la règle 41 (constant)


État 2

   42 constant: REAL_VALUE .

    $défaut  réduction par utilisation de la règle 42 (constant)


État 3

   44 constant: CHAR_VALUE .

    $défaut  réduction par utilisation de la règle 44 (constant)


État 4

   45 constant: BOOLEAN_VALUE .

    $défaut  réduction par utilisation de la règle 45 (constant)


État 5

   33 id_declarator: IDENTIFIER .

    $défaut  réduction par utilisation de la règle 33 (id_declarator)


État 6

   43 constant: STRING_VALUE .

    $défaut  réduction par utilisation de la règle 43 (constant)


État 7

   70 comment_block: COMMENT . NEWLINE

    NEWLINE  décalage et aller à l'état 33


État 8

   26 declaration_block: VAR . NEWLINE TAB declaration

    NEWLINE  décalage et aller à l'état 34


État 9

   57 expr: NOT . expr

    INT_VALUE      décalage et aller à l'état 1
    REAL_VALUE     décalage et aller à l'état 2
    CHAR_VALUE     décalage et aller à l'état 3
    BOOLEAN_VALUE  décalage et aller à l'état 4
    IDENTIFIER     décalage et aller à l'état 5
    STRING_VALUE   décalage et aller à l'état 6
    NOT            décalage et aller à l'état 9
    ABS            décalage et aller à l'état 10
    LOG            décalage et aller à l'état 11
    EXP            décalage et aller à l'état 12
    NULL_VALUE     décalage et aller à l'état 19
    '-'            décalage et aller à l'état 21
    '('            décalage et aller à l'état 22

    id_declarator  aller à l'état 35
    constant       aller à l'état 29
    expr           aller à l'état 36


État 10

   66 expr: ABS . '(' expr ')'

    '('  décalage et aller à l'état 37


État 11

   67 expr: LOG . '(' expr ')'
   68     | LOG . '(' expr COMMA expr ')'

    '('  décalage et aller à l'état 38


État 12

   69 expr: EXP . '(' expr ')'

    '('  décalage et aller à l'état 39


État 13

   11 stmt: IF . expr THEN NEWLINE stmt
   12     | IF . expr THEN NEWLINE stmt_block
   13     | IF . expr THEN NEWLINE stmt ELSE NEWLINE stmt
   14     | IF . expr THEN NEWLINE stmt_block ELSE NEWLINE stmt_block
   15     | IF . expr THEN NEWLINE stmt ELSE NEWLINE stmt_block
   16     | IF . expr THEN NEWLINE stmt_block ELSE NEWLINE stmt

    INT_VALUE      décalage et aller à l'état 1
    REAL_VALUE     décalage et aller à l'état 2
    CHAR_VALUE     décalage et aller à l'état 3
    BOOLEAN_VALUE  décalage et aller à l'état 4
    IDENTIFIER     décalage et aller à l'état 5
    STRING_VALUE   décalage et aller à l'état 6
    NOT            décalage et aller à l'état 9
    ABS            décalage et aller à l'état 10
    LOG            décalage et aller à l'état 11
    EXP            décalage et aller à l'état 12
    NULL_VALUE     décalage et aller à l'état 19
    '-'            décalage et aller à l'état 21
    '('            décalage et aller à l'état 22

    id_declarator  aller à l'état 35
    constant       aller à l'état 29
    expr           aller à l'état 40


État 14

   17 stmt: WHILE . expr DO NEWLINE stmt
   18     | WHILE . expr DO NEWLINE stmt_block

    INT_VALUE      décalage et aller à l'état 1
    REAL_VALUE     décalage et aller à l'état 2
    CHAR_VALUE     décalage et aller à l'état 3
    BOOLEAN_VALUE  décalage et aller à l'état 4
    IDENTIFIER     décalage et aller à l'état 5
    STRING_VALUE   décalage et aller à l'état 6
    NOT            décalage et aller à l'état 9
    ABS            décalage et aller à l'état 10
    LOG            décalage et aller à l'état 11
    EXP            décalage et aller à l'état 12
    NULL_VALUE     décalage et aller à l'état 19
    '-'            décalage et aller à l'état 21
    '('            décalage et aller à l'état 22

    id_declarator  aller à l'état 35
    constant       aller à l'état 29
    expr           aller à l'état 41


État 15

   19 stmt: FOR . assignation TO constant DO NEWLINE stmt
   20     | FOR . assignation TO constant DO NEWLINE stmt_block

    IDENTIFIER  décalage et aller à l'état 5

    id_declarator  aller à l'état 42
    assignation    aller à l'état 43


État 16

   21 stmt: READ . '(' id_declarator ')' stmt_terminator NEWLINE

    '('  décalage et aller à l'état 44


État 17

   22 stmt: WRITE . '(' expr ')' stmt_terminator NEWLINE

    '('  décalage et aller à l'état 45


État 18

   23 stmt: FUNCTION . id_declarator '(' declaration_list ')' DECLARATOR type_specifier NEWLINE stmt_block_with_return
   24     | FUNCTION . id_declarator '(' declaration_list ')' DECLARATOR type_specifier NEWLINE stmt_block

    IDENTIFIER  décalage et aller à l'état 5

    id_declarator  aller à l'état 46


État 19

   46 constant: NULL_VALUE .

    $défaut  réduction par utilisation de la règle 46 (constant)


État 20

   72 ignore_newline: NEWLINE .

    $défaut  réduction par utilisation de la règle 72 (ignore_newline)


État 21

   49 expr: '-' . expr

    INT_VALUE      décalage et aller à l'état 1
    REAL_VALUE     décalage et aller à l'état 2
    CHAR_VALUE     décalage et aller à l'état 3
    BOOLEAN_VALUE  décalage et aller à l'état 4
    IDENTIFIER     décalage et aller à l'état 5
    STRING_VALUE   décalage et aller à l'état 6
    NOT            décalage et aller à l'état 9
    ABS            décalage et aller à l'état 10
    LOG            décalage et aller à l'état 11
    EXP            décalage et aller à l'état 12
    NULL_VALUE     décalage et aller à l'état 19
    '-'            décalage et aller à l'état 21
    '('            décalage et aller à l'état 22

    id_declarator  aller à l'état 35
    constant       aller à l'état 29
    expr           aller à l'état 47


État 22

   65 expr: '(' . expr ')'

    INT_VALUE      décalage et aller à l'état 1
    REAL_VALUE     décalage et aller à l'état 2
    CHAR_VALUE     décalage et aller à l'état 3
    BOOLEAN_VALUE  décalage et aller à l'état 4
    IDENTIFIER     décalage et aller à l'état 5
    STRING_VALUE   décalage et aller à l'état 6
    NOT            décalage et aller à l'état 9
    ABS            décalage et aller à l'état 10
    LOG            décalage et aller à l'état 11
    EXP            décalage et aller à l'état 12
    NULL_VALUE     décalage et aller à l'état 19
    '-'            décalage et aller à l'état 21
    '('            décalage et aller à l'état 22

    id_declarator  aller à l'état 35
    constant       aller à l'état 29
    expr           aller à l'état 48


État 23

    0 $accept: program . $end

    $end  décalage et aller à l'état 49


État 24

    1 program: stmt_list . END_INPUT
    6 stmt_list: stmt_list . stmt

    INT_VALUE      décalage et aller à l'état 1
    REAL_VALUE     décalage et aller à l'état 2
    CHAR_VALUE     décalage et aller à l'état 3
    BOOLEAN_VALUE  décalage et aller à l'état 4
    IDENTIFIER     décalage et aller à l'état 5
    STRING_VALUE   décalage et aller à l'état 6
    COMMENT        décalage et aller à l'état 7
    VAR            décalage et aller à l'état 8
    NOT            décalage et aller à l'état 9
    ABS            décalage et aller à l'état 10
    LOG            décalage et aller à l'état 11
    EXP            décalage et aller à l'état 12
    IF             décalage et aller à l'état 13
    WHILE          décalage et aller à l'état 14
    FOR            décalage et aller à l'état 15
    READ           décalage et aller à l'état 16
    WRITE          décalage et aller à l'état 17
    FUNCTION       décalage et aller à l'état 18
    NULL_VALUE     décalage et aller à l'état 19
    NEWLINE        décalage et aller à l'état 20
    END_INPUT      décalage et aller à l'état 50
    '-'            décalage et aller à l'état 21
    '('            décalage et aller à l'état 22

    stmt               aller à l'état 51
    declaration_block  aller à l'état 26
    id_declarator      aller à l'état 27
    assignation        aller à l'état 28
    constant           aller à l'état 29
    expr               aller à l'état 30
    comment_block      aller à l'état 31
    ignore_newline     aller à l'état 32


État 25

    5 stmt_list: stmt .

    $défaut  réduction par utilisation de la règle 5 (stmt_list)


État 26

    8 stmt: declaration_block . NEWLINE
   27 declaration_block: declaration_block . NEWLINE TAB declaration

    NEWLINE  décalage et aller à l'état 52


État 27

   40 assignation: id_declarator . ASSIGNATOR expr
   48 expr: id_declarator .

    ASSIGNATOR  décalage et aller à l'état 53

    $défaut  réduction par utilisation de la règle 48 (expr)


État 28

    9 stmt: assignation . stmt_terminator NEWLINE

    TERMINATOR  décalage et aller à l'état 54

    stmt_terminator  aller à l'état 55


État 29

   47 expr: constant .

    $défaut  réduction par utilisation de la règle 47 (expr)


État 30

    7 stmt: expr . stmt_terminator NEWLINE
   50 expr: expr . '+' expr
   51     | expr . '-' expr
   52     | expr . '*' expr
   53     | expr . '/' expr
   54     | expr . INF expr
   55     | expr . AND expr
   56     | expr . OR expr
   58     | expr . SUP expr
   59     | expr . SUPEQ expr
   60     | expr . INFEQ expr
   61     | expr . NOTEQ expr
   62     | expr . EQ expr
   63     | expr . DIV expr
   64     | expr . MOD expr

    DIV         décalage et aller à l'état 56
    MOD         décalage et aller à l'état 57
    AND         décalage et aller à l'état 58
    OR          décalage et aller à l'état 59
    EQ          décalage et aller à l'état 60
    INF         décalage et aller à l'état 61
    INFEQ       décalage et aller à l'état 62
    SUP         décalage et aller à l'état 63
    SUPEQ       décalage et aller à l'état 64
    NOTEQ       décalage et aller à l'état 65
    TERMINATOR  décalage et aller à l'état 54
    '+'         décalage et aller à l'état 66
    '-'         décalage et aller à l'état 67
    '*'         décalage et aller à l'état 68
    '/'         décalage et aller à l'état 69

    stmt_terminator  aller à l'état 70


État 31

   10 stmt: comment_block .

    $défaut  réduction par utilisation de la règle 10 (stmt)


État 32

   25 stmt: ignore_newline .

    $défaut  réduction par utilisation de la règle 25 (stmt)


État 33

   70 comment_block: COMMENT NEWLINE .

    $défaut  réduction par utilisation de la règle 70 (comment_block)


État 34

   26 declaration_block: VAR NEWLINE . TAB declaration

    TAB  décalage et aller à l'état 71


État 35

   48 expr: id_declarator .

    $défaut  réduction par utilisation de la règle 48 (expr)


État 36

   50 expr: expr . '+' expr
   51     | expr . '-' expr
   52     | expr . '*' expr
   53     | expr . '/' expr
   54     | expr . INF expr
   55     | expr . AND expr
   56     | expr . OR expr
   57     | NOT expr .
   58     | expr . SUP expr
   59     | expr . SUPEQ expr
   60     | expr . INFEQ expr
   61     | expr . NOTEQ expr
   62     | expr . EQ expr
   63     | expr . DIV expr
   64     | expr . MOD expr

    DIV  décalage et aller à l'état 56
    MOD  décalage et aller à l'état 57
    '+'  décalage et aller à l'état 66
    '-'  décalage et aller à l'état 67
    '*'  décalage et aller à l'état 68
    '/'  décalage et aller à l'état 69

    $défaut  réduction par utilisation de la règle 57 (expr)


État 37

   66 expr: ABS '(' . expr ')'

    INT_VALUE      décalage et aller à l'état 1
    REAL_VALUE     décalage et aller à l'état 2
    CHAR_VALUE     décalage et aller à l'état 3
    BOOLEAN_VALUE  décalage et aller à l'état 4
    IDENTIFIER     décalage et aller à l'état 5
    STRING_VALUE   décalage et aller à l'état 6
    NOT            décalage et aller à l'état 9
    ABS            décalage et aller à l'état 10
    LOG            décalage et aller à l'état 11
    EXP            décalage et aller à l'état 12
    NULL_VALUE     décalage et aller à l'état 19
    '-'            décalage et aller à l'état 21
    '('            décalage et aller à l'état 22

    id_declarator  aller à l'état 35
    constant       aller à l'état 29
    expr           aller à l'état 72


État 38

   67 expr: LOG '(' . expr ')'
   68     | LOG '(' . expr COMMA expr ')'

    INT_VALUE      décalage et aller à l'état 1
    REAL_VALUE     décalage et aller à l'état 2
    CHAR_VALUE     décalage et aller à l'état 3
    BOOLEAN_VALUE  décalage et aller à l'état 4
    IDENTIFIER     décalage et aller à l'état 5
    STRING_VALUE   décalage et aller à l'état 6
    NOT            décalage et aller à l'état 9
    ABS            décalage et aller à l'état 10
    LOG            décalage et aller à l'état 11
    EXP            décalage et aller à l'état 12
    NULL_VALUE     décalage et aller à l'état 19
    '-'            décalage et aller à l'état 21
    '('            décalage et aller à l'état 22

    id_declarator  aller à l'état 35
    constant       aller à l'état 29
    expr           aller à l'état 73


État 39

   69 expr: EXP '(' . expr ')'

    INT_VALUE      décalage et aller à l'état 1
    REAL_VALUE     décalage et aller à l'état 2
    CHAR_VALUE     décalage et aller à l'état 3
    BOOLEAN_VALUE  décalage et aller à l'état 4
    IDENTIFIER     décalage et aller à l'état 5
    STRING_VALUE   décalage et aller à l'état 6
    NOT            décalage et aller à l'état 9
    ABS            décalage et aller à l'état 10
    LOG            décalage et aller à l'état 11
    EXP            décalage et aller à l'état 12
    NULL_VALUE     décalage et aller à l'état 19
    '-'            décalage et aller à l'état 21
    '('            décalage et aller à l'état 22

    id_declarator  aller à l'état 35
    constant       aller à l'état 29
    expr           aller à l'état 74


État 40

   11 stmt: IF expr . THEN NEWLINE stmt
   12     | IF expr . THEN NEWLINE stmt_block
   13     | IF expr . THEN NEWLINE stmt ELSE NEWLINE stmt
   14     | IF expr . THEN NEWLINE stmt_block ELSE NEWLINE stmt_block
   15     | IF expr . THEN NEWLINE stmt ELSE NEWLINE stmt_block
   16     | IF expr . THEN NEWLINE stmt_block ELSE NEWLINE stmt
   50 expr: expr . '+' expr
   51     | expr . '-' expr
   52     | expr . '*' expr
   53     | expr . '/' expr
   54     | expr . INF expr
   55     | expr . AND expr
   56     | expr . OR expr
   58     | expr . SUP expr
   59     | expr . SUPEQ expr
   60     | expr . INFEQ expr
   61     | expr . NOTEQ expr
   62     | expr . EQ expr
   63     | expr . DIV expr
   64     | expr . MOD expr

    DIV    décalage et aller à l'état 56
    MOD    décalage et aller à l'état 57
    AND    décalage et aller à l'état 58
    OR     décalage et aller à l'état 59
    THEN   décalage et aller à l'état 75
    EQ     décalage et aller à l'état 60
    INF    décalage et aller à l'état 61
    INFEQ  décalage et aller à l'état 62
    SUP    décalage et aller à l'état 63
    SUPEQ  décalage et aller à l'état 64
    NOTEQ  décalage et aller à l'état 65
    '+'    décalage et aller à l'état 66
    '-'    décalage et aller à l'état 67
    '*'    décalage et aller à l'état 68
    '/'    décalage et aller à l'état 69


État 41

   17 stmt: WHILE expr . DO NEWLINE stmt
   18     | WHILE expr . DO NEWLINE stmt_block
   50 expr: expr . '+' expr
   51     | expr . '-' expr
   52     | expr . '*' expr
   53     | expr . '/' expr
   54     | expr . INF expr
   55     | expr . AND expr
   56     | expr . OR expr
   58     | expr . SUP expr
   59     | expr . SUPEQ expr
   60     | expr . INFEQ expr
   61     | expr . NOTEQ expr
   62     | expr . EQ expr
   63     | expr . DIV expr
   64     | expr . MOD expr

    DIV    décalage et aller à l'état 56
    MOD    décalage et aller à l'état 57
    AND    décalage et aller à l'état 58
    OR     décalage et aller à l'état 59
    DO     décalage et aller à l'état 76
    EQ     décalage et aller à l'état 60
    INF    décalage et aller à l'état 61
    INFEQ  décalage et aller à l'état 62
    SUP    décalage et aller à l'état 63
    SUPEQ  décalage et aller à l'état 64
    NOTEQ  décalage et aller à l'état 65
    '+'    décalage et aller à l'état 66
    '-'    décalage et aller à l'état 67
    '*'    décalage et aller à l'état 68
    '/'    décalage et aller à l'état 69


État 42

   40 assignation: id_declarator . ASSIGNATOR expr

    ASSIGNATOR  décalage et aller à l'état 53


État 43

   19 stmt: FOR assignation . TO constant DO NEWLINE stmt
   20     | FOR assignation . TO constant DO NEWLINE stmt_block

    TO  décalage et aller à l'état 77


État 44

   21 stmt: READ '(' . id_declarator ')' stmt_terminator NEWLINE

    IDENTIFIER  décalage et aller à l'état 5

    id_declarator  aller à l'état 78


État 45

   22 stmt: WRITE '(' . expr ')' stmt_terminator NEWLINE

    INT_VALUE      décalage et aller à l'état 1
    REAL_VALUE     décalage et aller à l'état 2
    CHAR_VALUE     décalage et aller à l'état 3
    BOOLEAN_VALUE  décalage et aller à l'état 4
    IDENTIFIER     décalage et aller à l'état 5
    STRING_VALUE   décalage et aller à l'état 6
    NOT            décalage et aller à l'état 9
    ABS            décalage et aller à l'état 10
    LOG            décalage et aller à l'état 11
    EXP            décalage et aller à l'état 12
    NULL_VALUE     décalage et aller à l'état 19
    '-'            décalage et aller à l'état 21
    '('            décalage et aller à l'état 22

    id_declarator  aller à l'état 35
    constant       aller à l'état 29
    expr           aller à l'état 79


État 46

   23 stmt: FUNCTION id_declarator . '(' declaration_list ')' DECLARATOR type_specifier NEWLINE stmt_block_with_return
   24     | FUNCTION id_declarator . '(' declaration_list ')' DECLARATOR type_specifier NEWLINE stmt_block

    '('  décalage et aller à l'état 80


État 47

   49 expr: '-' expr .
   50     | expr . '+' expr
   51     | expr . '-' expr
   52     | expr . '*' expr
   53     | expr . '/' expr
   54     | expr . INF expr
   55     | expr . AND expr
   56     | expr . OR expr
   58     | expr . SUP expr
   59     | expr . SUPEQ expr
   60     | expr . INFEQ expr
   61     | expr . NOTEQ expr
   62     | expr . EQ expr
   63     | expr . DIV expr
   64     | expr . MOD expr

    $défaut  réduction par utilisation de la règle 49 (expr)


État 48

   50 expr: expr . '+' expr
   51     | expr . '-' expr
   52     | expr . '*' expr
   53     | expr . '/' expr
   54     | expr . INF expr
   55     | expr . AND expr
   56     | expr . OR expr
   58     | expr . SUP expr
   59     | expr . SUPEQ expr
   60     | expr . INFEQ expr
   61     | expr . NOTEQ expr
   62     | expr . EQ expr
   63     | expr . DIV expr
   64     | expr . MOD expr
   65     | '(' expr . ')'

    DIV    décalage et aller à l'état 56
    MOD    décalage et aller à l'état 57
    AND    décalage et aller à l'état 58
    OR     décalage et aller à l'état 59
    EQ     décalage et aller à l'état 60
    INF    décalage et aller à l'état 61
    INFEQ  décalage et aller à l'état 62
    SUP    décalage et aller à l'état 63
    SUPEQ  décalage et aller à l'état 64
    NOTEQ  décalage et aller à l'état 65
    '+'    décalage et aller à l'état 66
    '-'    décalage et aller à l'état 67
    '*'    décalage et aller à l'état 68
    '/'    décalage et aller à l'état 69
    ')'    décalage et aller à l'état 81


État 49

    0 $accept: program $end .

    $défaut  accepter


État 50

    1 program: stmt_list END_INPUT .

    $défaut  réduction par utilisation de la règle 1 (program)


État 51

    6 stmt_list: stmt_list stmt .

    $défaut  réduction par utilisation de la règle 6 (stmt_list)


État 52

    8 stmt: declaration_block NEWLINE .
   27 declaration_block: declaration_block NEWLINE . TAB declaration

    TAB  décalage et aller à l'état 82

    $défaut  réduction par utilisation de la règle 8 (stmt)


État 53

   40 assignation: id_declarator ASSIGNATOR . expr

    INT_VALUE      décalage et aller à l'état 1
    REAL_VALUE     décalage et aller à l'état 2
    CHAR_VALUE     décalage et aller à l'état 3
    BOOLEAN_VALUE  décalage et aller à l'état 4
    IDENTIFIER     décalage et aller à l'état 5
    STRING_VALUE   décalage et aller à l'état 6
    NOT            décalage et aller à l'état 9
    ABS            décalage et aller à l'état 10
    LOG            décalage et aller à l'état 11
    EXP            décalage et aller à l'état 12
    NULL_VALUE     décalage et aller à l'état 19
    '-'            décalage et aller à l'état 21
    '('            décalage et aller à l'état 22

    id_declarator  aller à l'état 35
    constant       aller à l'état 29
    expr           aller à l'état 83


État 54

   71 stmt_terminator: TERMINATOR .

    $défaut  réduction par utilisation de la règle 71 (stmt_terminator)


État 55

    9 stmt: assignation stmt_terminator . NEWLINE

    NEWLINE  décalage et aller à l'état 84


État 56

   63 expr: expr DIV . expr

    INT_VALUE      décalage et aller à l'état 1
    REAL_VALUE     décalage et aller à l'état 2
    CHAR_VALUE     décalage et aller à l'état 3
    BOOLEAN_VALUE  décalage et aller à l'état 4
    IDENTIFIER     décalage et aller à l'état 5
    STRING_VALUE   décalage et aller à l'état 6
    NOT            décalage et aller à l'état 9
    ABS            décalage et aller à l'état 10
    LOG            décalage et aller à l'état 11
    EXP            décalage et aller à l'état 12
    NULL_VALUE     décalage et aller à l'état 19
    '-'            décalage et aller à l'état 21
    '('            décalage et aller à l'état 22

    id_declarator  aller à l'état 35
    constant       aller à l'état 29
    expr           aller à l'état 85


État 57

   64 expr: expr MOD . expr

    INT_VALUE      décalage et aller à l'état 1
    REAL_VALUE     décalage et aller à l'état 2
    CHAR_VALUE     décalage et aller à l'état 3
    BOOLEAN_VALUE  décalage et aller à l'état 4
    IDENTIFIER     décalage et aller à l'état 5
    STRING_VALUE   décalage et aller à l'état 6
    NOT            décalage et aller à l'état 9
    ABS            décalage et aller à l'état 10
    LOG            décalage et aller à l'état 11
    EXP            décalage et aller à l'état 12
    NULL_VALUE     décalage et aller à l'état 19
    '-'            décalage et aller à l'état 21
    '('            décalage et aller à l'état 22

    id_declarator  aller à l'état 35
    constant       aller à l'état 29
    expr           aller à l'état 86


État 58

   55 expr: expr AND . expr

    INT_VALUE      décalage et aller à l'état 1
    REAL_VALUE     décalage et aller à l'état 2
    CHAR_VALUE     décalage et aller à l'état 3
    BOOLEAN_VALUE  décalage et aller à l'état 4
    IDENTIFIER     décalage et aller à l'état 5
    STRING_VALUE   décalage et aller à l'état 6
    NOT            décalage et aller à l'état 9
    ABS            décalage et aller à l'état 10
    LOG            décalage et aller à l'état 11
    EXP            décalage et aller à l'état 12
    NULL_VALUE     décalage et aller à l'état 19
    '-'            décalage et aller à l'état 21
    '('            décalage et aller à l'état 22

    id_declarator  aller à l'état 35
    constant       aller à l'état 29
    expr           aller à l'état 87


État 59

   56 expr: expr OR . expr

    INT_VALUE      décalage et aller à l'état 1
    REAL_VALUE     décalage et aller à l'état 2
    CHAR_VALUE     décalage et aller à l'état 3
    BOOLEAN_VALUE  décalage et aller à l'état 4
    IDENTIFIER     décalage et aller à l'état 5
    STRING_VALUE   décalage et aller à l'état 6
    NOT            décalage et aller à l'état 9
    ABS            décalage et aller à l'état 10
    LOG            décalage et aller à l'état 11
    EXP            décalage et aller à l'état 12
    NULL_VALUE     décalage et aller à l'état 19
    '-'            décalage et aller à l'état 21
    '('            décalage et aller à l'état 22

    id_declarator  aller à l'état 35
    constant       aller à l'état 29
    expr           aller à l'état 88


État 60

   62 expr: expr EQ . expr

    INT_VALUE      décalage et aller à l'état 1
    REAL_VALUE     décalage et aller à l'état 2
    CHAR_VALUE     décalage et aller à l'état 3
    BOOLEAN_VALUE  décalage et aller à l'état 4
    IDENTIFIER     décalage et aller à l'état 5
    STRING_VALUE   décalage et aller à l'état 6
    NOT            décalage et aller à l'état 9
    ABS            décalage et aller à l'état 10
    LOG            décalage et aller à l'état 11
    EXP            décalage et aller à l'état 12
    NULL_VALUE     décalage et aller à l'état 19
    '-'            décalage et aller à l'état 21
    '('            décalage et aller à l'état 22

    id_declarator  aller à l'état 35
    constant       aller à l'état 29
    expr           aller à l'état 89


État 61

   54 expr: expr INF . expr
